fix file excel and popover on mobile

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -133,6 +133,14 @@ a {
     }
   }
 }
+@media (max-width: 739px) {
+  .popover {
+    display: none;
+  }
+  .ant-popover {
+    display: none;
+  }
+}
 
 // responsive
 .grid {
