--- a/src/pages/cart/Cart.scss
+++ b/src/pages/cart/Cart.scss
@@ -6,3 +6,13 @@
     min-height: 60vh;
   }
 }
+/* Mobile */
+@media (max-width: 739px) {
+  .cart {
+    .cart__container {
+      .cart__steps {
+        display: none;
+      }
+    }
+  }
+}
