--- a/src/pages/cart/cartOrder/CartOrder.scss
+++ b/src/pages/cart/cartOrder/CartOrder.scss
@@ -154,7 +154,7 @@
             flex-direction: column;
             gap: 8px;
             background-color: #f5f5fa;
-            padding: 0;
+            padding: 16px 0;
           }
           .cartOrder__item--mobile {
             background-color: #fff;
