--- a/src/pages/cart/cartStart/CartStart.scss
+++ b/src/pages/cart/cartStart/CartStart.scss
@@ -180,6 +180,7 @@
             flex-direction: column;
             gap: 8px;
             background-color: #f5f5fa;
+            padding: 16px 0;
           }
           .cartStart__item--mobile {
             box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.07);
@@ -191,7 +192,7 @@
             border-radius: 4px;
 
             .cartStart__left--img {
-              width: 100%;
+              width: 90%;
               height: 80%;
               max-width: 100%;
             }
